Thu May 22 15:04:21 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/dataread.c:
	- Avoid shadow warnings for "type".

Thu May 22 14:53:06 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c:
	- Avoid shadow warnings for "chkintr" and "hndlintr".

Thu May 22 14:35:36 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/ctpublic.h src/ctlib/cs.c src/ctlib/ct.c:
	- Avoid shadow warnings for "index".

Thu May 22 14:31:29 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h include/tdsconvert.h:
	- Remove redundant declarations.

Tue May 20 17:31:07 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/odbc.c:
	* src/odbc/sql2tds.c src/odbc/sql2tds.h src/tds/convert.c:
	- support all values of StringOrLen in ODBC

Tue May 20 13:33:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/README.vms vms/config_h.vms vms/configure.com:
	* vms/descrip_mms.template vms/getpass.c vms/libodbc.opt:
	* vms/odbc_driver_axp.opt vms/odbc_unimplemented.c:
	- applied patch #733631
	 - own up in our config.h to having locale.h, nl_langinfo, and 
	   readline
	 - build the pool server
	 - redone getpass() implementation
	 - update list of ODBC functions
	 - no longer export ODBC functions that are not implemented
	- reindented

Tue May 20 12:49:20 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/t0004.c:
	- fix bug binding parameters with NULL indicator
	- improve test for detect fixed bug

Mon May 19 13:47:52 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/tds.h src/dblib/dblib.c src/tds/mem.c
	  src/tds/read.c:
	- implement dbsetinterrupt().

Mon May 19 12:28:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
	- fixed more&count test

Mon May 19 11:26:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/locale.c: cleanup
