@@ -41,11 +41,8 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: convert_tds2sql.c,v 1.31 2003/04/25 17:05:25 freddy77 Exp $";
+static char software_version[] = "$Id: convert_tds2sql.c,v 1.32 2003/05/22 19:27:48 castellano Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
-
-
-extern const int tds_numeric_bytes_per_prec[];
 
 TDS_INT
 convert_tds2sql(TDSCONTEXT * context, int srctype, TDS_CHAR * src, TDS_UINT srclen, int desttype, TDS_CHAR * dest, TDS_UINT destlen)
